# design-patterns-python

./: Makefile  README.md  pyproject.toml  run.sh
.github/workflows/: check-safety.yaml  ci-js-es2015.yaml  ci-js-es5.yaml  ci-python.yaml  ci.yaml
js/es2015/: .eslintrc.json  Makefile  package-lock.json  package.json
js/es2015/spec/: iterator_spec.mjs
js/es5/: .eslintrc.json  Makefile  package-lock.json  package.json
js/es5/spec/: iterator_spec.js
python/: Makefile  mypy.ini  pyproject.toml  test.py
python/src/adapter/: banner.py
python/tests/: conftest.py
src/adapter/: banner.py
src/bridge/: display_impl.py  file_display_impl.py  string_display_impl.py
src/builder/: builder.py  text_builder.py  tk_builder.py
src/chain_of_responsibility/: no_support.py  odd_support.py
src/command/: color_command.py  draw_canvas.py  draw_command.py  point.py
src/common/: decorator.py  model.py
src/composite/: entry.py
src/decorator/: border.py  full_border.py  side_border.py
src/flyweight/: big_char_factory.py  big_string.py
src/iterator/: aggregate.py  iterator.py
src/mediator/: colleague.py  colleague_entry.py  login_frame.py  mediator.py
src/observer/: digit_observer.py  graph_observer.py  number_generator.py  random_number_generator.py
src/proxy/: printable.py  printer_proxy.py
src/singleton/: singleton.py  ticket_maker.py
src/state/: state.py
src/template_method/: display.py
src/visitor/: directory.py  list_visitor.py  visitor.py
tests/test_100_unit/: test_common_custom_pydantic.py  test_common_decorator.py  test_common_util.py
(+156 files in other folders)
